--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body{
   background: linear-gradient(to right, #E8E8E8, #C1C1C1);
   border: 4px solid #a7a39e;
   box-shadow: 0 0 6px #b3ab9b;
+  display: flex;
+  flex-direction: column;
 }
 
 .teclado{
@@ -73,4 +75,27 @@ margin-left: 30px;
   width: 80px;
   height: 50px;
   padding: 10px;
+}
+
+.d1{
+  flex: .9;
+  display: flex;
+}
+
+.d1-left{
+  flex: 1;
+}
+
+.d1-right{
+  width: 90px;
+  border-left: 2px solid black;
+}
+
+.d2{
+  height: 50px;
+  font-size: 15px;
+  border-top: 2px solid rgb(77, 77, 77);
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 10px;
 }
