--- a/style.css
+++ b/style.css
@@ -181,3 +181,9 @@ line-height: 30px;
   padding-right: 5px;
   padding-top: 10px;
 }
+
+.aviso-grande {
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+}
