--- a/style.css
+++ b/style.css
@@ -187,3 +187,11 @@ line-height: 30px;
   font-weight: bold;
   text-align: center;
 }
+
+.aviso-gigante {
+  font-size: 70px;
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
